2007-10-25  Gary Thomas  <gary@mlbassoc.com>

	* standalone/wxwin/propertywin.h: Remove class qualifier - not
	legal with GCC-4.x

2006-09-06  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/configitem.cpp: Allow full 32-bit signed integer
	range when editing CDL items using the ecIntegerEditorCtrl.

2006-07-11  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/configtool.cpp: Workaround an exception handling
	issue with Cygwin 1.5.20.

2005-07-09  Bart Veer  <bartv@ecoscentric.com>

	* common/common/build.cxx: add support for C++ files that use a
	.cpp suffix

2004-01-16  John Dallaway  <jld@ecoscentric.com>

	* configtool/standalone/wxwin/configtool.cpp: Prompt to save eCos
	Configuration as necessary before building eCos.

	* configtool/standalone/wxwin/mainwin.cpp: Update copyright notice.

2003-08-13  John Dallaway  <jld@ecoscentric.com>

	* configtool/common/common/build.cxx: More robust implementation for
	use of the cygdrive prefix.

2003-05-19  John Dallaway  <jld@ecoscentric.com>

	* configtool/standalone/wxwin/manual/*,
	  configtool/standalone/wxwin/setup/*:  Remove obsolete configtool
	documentation and installer.

2003-05-14  John Dallaway  <jld@ecoscentric.com>

	* standalone/common/ecosconfig.cxx,
	  standalone/wxwin/configtooldoc.cpp,
	  standalone/wxwin/admindlg.cpp: Convert native Windows format
        repository specifications to POSIX format in Cygwin builds, as now
	required by the CDL library.

2003-05-14  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/admindlg.cpp,
	  standalone/wxwin/buildoptionsdlg.cpp,
	  standalone/wxwin/configtool.cpp,
	  standalone/wxwin/configtoolview.cpp,
	  standalone/wxwin/pacakgesdlg.cpp,
	  standalone/wxwin/runtestsdlg.cpp: Minor changes to allow building
	against current wxWindows CVS sources. [ contributed by Julian Smart ]

	* standalone/wxwin/makefile.gnu: Remove msgdlgex.cpp from the build.

2003-05-02  John Dallaway  <jld@ecoscentric.com>
